--- a/pinyougou-search-service/pom.xml
+++ b/pinyougou-search-service/pom.xml
@@ -95,7 +95,11 @@
             <artifactId>pinyougou-pojo</artifactId>
             <version>0.0.5-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.pinyougou</groupId>
+            <artifactId>pinyougou-common</artifactId>
+            <version>0.0.5-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
