--- a/pinyougou-manager-web/pom.xml
+++ b/pinyougou-manager-web/pom.xml
@@ -104,6 +104,11 @@
 		   <artifactId>pinyougou-common</artifactId>
 		   <version>0.0.5-SNAPSHOT</version>
 	   </dependency>
+       <dependency>
+           <groupId>com.pinyougou</groupId>
+           <artifactId>pinyougou-search-interface</artifactId>
+           <version>0.0.5-SNAPSHOT</version>
+       </dependency>
    </dependencies>
   
   
